# psp

./: .clangd  .gitignore  CMakeLists.txt  bak.c  cube.stl  main.c  todo
include/: boilerplate.c  boilerplate.h  graphics_setup.h  ground.h  render.h  render_model.h  renderlist.h  stlloader.h  tiles.h  trianglethings.h
src/: boilerplate.c  graphics_setup.c  ground.c  model.c  render.c  render_model.c  renderlist.c  stlloader.c  trianglethings.c
